feat(application.yml): add index prefix conf
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -117,3 +117,8 @@ queryBegin: '?'
 customQueryBegin: '?'
 customQuery:
 #dbName:
+
+# to set elasticsearch index names prefixes (default empty)
+# please use a separator '_' at prefix end for readiness
+index:
+  prefix: 
