feat(application.yaml): add powsybl-ws property level for our own properties settings
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -118,7 +118,9 @@ customQueryBegin: '?'
 customQuery:
 #dbName:
 
-# to set elasticsearch index names prefixes (default empty)
-# please use a separator '_' at prefix end for readiness
-index:
-  prefix: 
+powsybl-ws:
+  # To set elasticsearch index names prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness
+  elasticsearch:
+    index:
+      prefix: 
