feat(application.yaml) Add our poxsybl-ws rabbitmq destination prefix property
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -117,3 +117,11 @@ queryBegin: '?'
 customQueryBegin: '?'
 customQuery:
 #dbName:
+
+powsybl-ws:
+  
+  # To set rabbitmq bidings destination prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness 
+  rabbitmq:
+    destination:
+      prefix:
