--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -117,3 +117,10 @@ queryBegin: '?'
 customQueryBegin: '?'
 customQuery:
 #dbName:
+
+powsybl-ws:
+  # To set cassandra keyspace prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness 
+  cassandra:
+    keyspace:
+      prefix: 
