feat(application.yml): add index prefix conf (#2)
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -117,3 +117,10 @@ queryBegin: '?'
 customQueryBegin: '?'
 customQuery:
 #dbName:
+
+powsybl-ws:
+  # To set elasticsearch index names prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness
+  elasticsearch:
+    index:
+      prefix: 
