feat(application.yaml) Add our poxsybl-ws rabbitmq destination prefix property (#3)
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -123,4 +123,10 @@ powsybl-ws:
   # please use a separator '_' at prefix end for readiness
   elasticsearch:
     index:
-      prefix: 
+      prefix:
+
+  # To set rabbitmq bidings destination prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness
+  rabbitmq:
+    destination:
+      prefix:
