feat(prefix): Add a own powsybl-ws postgres database or Schema prefix parameter (#4)
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -130,3 +130,11 @@ powsybl-ws:
   rabbitmq:
     destination:
       prefix:
+
+  # To set postgres database or schema prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness
+  postgres:
+    databaseOrSchema:
+      prefix:
+
+dbPrefix: ${postgres.databaseOrSchema.prefix:}
