feat(prefix): Add a own powsybl-ws cassandra keyspace prefix parameter (#5)
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -137,4 +137,10 @@ powsybl-ws:
     databaseOrSchema:
       prefix:
 
+  # To set cassandra keyspace prefixes (default empty)
+  # please use a separator '_' at prefix end for readiness
+  cassandra:
+    keyspace:
+      prefix:
+
 dbPrefix: ${postgres.databaseOrSchema.prefix:}
