fix(config): Add forgotten 'powsybl-ws' yaml prefix when defining dbPrefix property
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -143,4 +143,4 @@ powsybl-ws:
     keyspace:
       prefix:
 
-dbPrefix: ${postgres.databaseOrSchema.prefix:}
+dbPrefix: ${powsybl-ws.postgres.databaseOrSchema.prefix:}
