--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,12 @@ logging:
     # To print db information at startup for postgres
     com.zaxxer.hikari.HikariConfig: DEBUG
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,info"
+
 spring:
   # to have webservices connect to localhost in IDEs
   profiles:
