Allow to specify only powsybl-ws.environment for ES/RABBIT/DB prefix configuration
Signed-off-by: HARPER Jon <jon.harper87@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -127,22 +127,24 @@ customQuery:
 #dbName:
 
 powsybl-ws:
+  environment:
+
   # To set elasticsearch index names prefixes (default empty)
   # please use a separator '_' at prefix end for readiness
   elasticsearch:
     index:
-      prefix:
+      prefix: ${powsybl-ws.environment:}
 
   # To set rabbitmq bidings destination prefixes (default empty)
   # please use a separator '_' at prefix end for readiness
   rabbitmq:
     destination:
-      prefix:
+      prefix: ${powsybl-ws.environment:}
 
   # To set postgres database or schema prefixes (default empty)
   # please use a separator '_' at prefix end for readiness
   postgres:
     databaseOrSchema:
-      prefix:
+      prefix: ${powsybl-ws.environment:}
 
 dbPrefix: ${powsybl-ws.postgres.databaseOrSchema.prefix:}
