--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -158,8 +158,8 @@ powsybl-ws:
     url: ${powsybl-ws.database.urlManyBases}
 
     # use this if you want 1 database for all microservice, each in a schema
-    # and set commonDbName in application.yaml, and set queryBegin: '&' and customQueryBegin: '&' in application.yaml
-    #dbUrl=${dbUrlManySchemas}
+    # and set commonName in application.yaml, and set queryBegin: '&' and customQueryBegin: '&' in application.yaml
+    # url=${powsybl-ws.database.urlManySchemas}
 
     # To set postgres database or schema prefixes (default empty)
     # please use a separator '_' at prefix end for readiness
@@ -179,4 +179,4 @@ powsybl-ws:
     queryBegin: '?'
     customQueryBegin: '?'
     customQuery:
-    #dbName:
+    #name:
