fix: HOSTNAME now has a default value in order to work when started in IDE
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 # to have the hostname in /actuator/info
 info:
-  hostname: ${HOSTNAME}
+  hostname: ${HOSTNAME:}
 
 server:
   # for springdoc swagger-ui behind a reverse proxy (X-FORWARDED-*)
