--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,16 +43,16 @@ spring:
   # for now, for both r2dbc and jdbc. Also for now with the same user
   # as the app, but this should be changed
   liquibase:
-    url: jdbc:${dbUrl}
-    user: ${login}
-    password: ${password}
+    url: jdbc:${powsybl-ws.database.url}
+    user: ${powsybl-ws.database.login}
+    password: ${powsybl-ws.database.password}
 
 
   # for microservices with r2dbc
   r2dbc:
-    url: r2dbc:${dbUrl}
-    username: ${login}
-    password: ${password}
+    url: r2dbc:${powsybl-ws.database.url}
+    username: ${powsybl-ws.database.login}
+    password: ${powsybl-ws.database.password}
     pool:
       # note: r2dbc pool 0.8.x (and probably 0.9.x) doesn't have a minimumIdle, so it will close all connections if idle.
       # This is still better than having many connections open and idle. Someday if they add support we can configure minimumIdle here
@@ -61,9 +61,9 @@ spring:
 
   # for microservices with jpa/hibernate
   datasource:
-    url: jdbc:${dbUrl}
-    username: ${login}
-    password: ${password}
+    url: jdbc:${powsybl-ws.database.url}
+    username: ${powsybl-ws.database.login}
+    password: ${powsybl-ws.database.password}
 
     # we have many microservices connecting to the same db,
     # change the minimum idle from 10 to 1 by default
@@ -87,7 +87,7 @@ spring:
           schema-generation:
             scripts:
               #action: create
-              create-target: src/main/resources/${dbname}.sql
+              create-target: src/main/resources/${powsybl-ws.database.name}.sql
               create-source: metadata
 
   # for microservices with elasticsearch
@@ -111,20 +111,7 @@ spring:
       - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRepositoriesAutoConfiguration
       - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRestClientAutoConfiguration
 
-# customQuery allows a microservice to set query parameters specific to itself.
-# if customQuery is empty, set queryBegin to "?", otherwise set it to "&".
-# this allow the user to add additional query elements common to all microservices
-# and to use the appropriate leading character depending on whether the microsevice
-# uses custom query parameters or not. customQueryBegin in this file must always be '?',
-# it is present only to be able to be overriden by deployments in the
-# manyschemas mode. It is used only for microservices that have predefined
-# query parameters, and it must be used if customQuery is not empty, otherwise
-# the manyschema mode doesn't work, so define it everywhere because it doesn't
-# hurt.
-queryBegin: '?'
-customQueryBegin: '?'
-customQuery:
-#dbName:
+
 
 powsybl-ws:
   # To set elasticsearch index names prefixes (default empty)
@@ -139,10 +126,57 @@ powsybl-ws:
     destination:
       prefix:
 
-  # To set postgres database or schema prefixes (default empty)
-  # please use a separator '_' at prefix end for readiness
-  postgres:
+  database:
+    # default values
+    vendor: postgresql
+    host: postgres
+    port: 5432
+    login: postgres
+    password: postgres
+
+    # use this to set common query parameters, and use the predefined
+    # '${queryBegin}' marker to put the correct leading char '?' or '&' depending
+    # on whether the microservice has predefined query parameters.
+    # for example, use this (with the ${} and all): query=${queryBegin}timeout=5&reconnect=true
+    query:
+
+    # these allow to customize the url construction a bit for weird connection strings
+    hostPort: ://${powsybl-ws.database.host}:${powsybl-ws.database.port}/
+
+    prefix: ${powsybl-ws.database.databaseOrSchema.prefix:}
+    protocolHost: ${powsybl-ws.database.vendor}${powsybl-ws.database.hostPort}
+    fullName: ${powsybl-ws.database.prefix}${powsybl-ws.database.name}
+    finalQuery: ${powsybl-ws.database.customQuery}${powsybl-ws.database.query}
+    manyBasesPath: ${powsybl-ws.database.fullName}${powsybl-ws.database.finalQuery}
+    commonName:
+    manySchemasPath: ${powsybl-ws.database.commonName}?currentSchema=${powsybl-ws.database.fullName}${powsybl-ws.database.finalQuery}
+
+    urlManyBases: ${powsybl-ws.database.protocolHost}${powsybl-ws.database.manyBasesPath}
+    urlManySchemas: ${powsybl-ws.database.protocolHost}${powsybl-ws.database.manySchemasPath}
+
+    # leave this if you want 1 database per microservice
+    url: ${powsybl-ws.database.urlManyBases}
+
+    # use this if you want 1 database for all microservice, each in a schema
+    # and set commonName in application.yaml, and set queryBegin: '&' and customQueryBegin: '&' in application.yaml
+    # url=${powsybl-ws.database.urlManySchemas}
+
+    # To set postgres database or schema prefixes (default empty)
+    # please use a separator '_' at prefix end for readiness
     databaseOrSchema:
       prefix:
 
-dbPrefix: ${powsybl-ws.postgres.databaseOrSchema.prefix:}
+    # customQuery allows a microservice to set query parameters specific to itself.
+    # if customQuery is empty, set queryBegin to "?", otherwise set it to "&".
+    # this allow the user to add additional query elements common to all microservices
+    # and to use the appropriate leading character depending on whether the microsevice
+    # uses custom query parameters or not. customQueryBegin in this file must always be '?',
+    # it is present only to be able to be overriden by deployments in the
+    # manyschemas mode. It is used only for microservices that have predefined
+    # query parameters, and it must be used if customQuery is not empty, otherwise
+    # the manyschema mode doesn't work, so define it everywhere because it doesn't
+    # hurt.
+    queryBegin: '?'
+    customQueryBegin: '?'
+    customQuery:
+    #name:
