add default provider configuration
Signed-off-by: walid-sahnoun <walid.sahnoun@rte-france.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -182,3 +182,6 @@ powsybl-ws:
     customQueryBegin: '?'
     customQuery:
     #name:
+  # default values for loadflow providers "Hades2" or "OpenLoadFlow"
+  loadflow:
+    default-provider: Hades2
