fix default provider
Signed-off-by: walid-sahnoun <walid.sahnoun@rte-france.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -184,4 +184,4 @@ powsybl-ws:
     #name:
   # default values for loadflow providers "Hades2" or "OpenLoadFlow"
   loadflow:
-    default-provider: Hades2
+    default-provider: OpenLoadFlow
