--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,9 @@ management:
     web:
       exposure:
         include: "health,info"
+  info:
+    git:
+      mode: full
 
 spring:
   # to have webservices connect to localhost in IDEs
