Upgrade to powsybl-dependencies 2023.1.1 (#24)
Signed-off-by: Etienne Homer <etiennehomer@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
 
     <properties>
         <java.version>11</java.version>
-        <powsybl-core.version>4.10.1</powsybl-core.version>
+        <powsybl-dependencies.version>2023.1.1</powsybl-dependencies.version>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -49,8 +50,8 @@
             <!-- imports -->
             <dependency>
                 <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-core</artifactId>
-                <version>${powsybl-core.version}</version>
+                <artifactId>powsybl-dependencies</artifactId>
+                <version>${powsybl-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -65,6 +66,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
