Add startup db logs, displayed even if liquibase fails
Signed-off-by: HARPER Jon <jon.harper87@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ logging:
   level:
     # To print db information at startup for postgres
     com.zaxxer.hikari.HikariConfig: DEBUG
+    org.springframework.jdbc.datasource.SimpleDriverDataSource: DEBUG
 
 management:
   endpoints:
