--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 
     <properties>
         <java.version>11</java.version>
-        <powsybl-ws-dependencies.version>2.5.0</powsybl-ws-dependencies.version>
+        <powsybl-dependencies.version>2023.3.1</powsybl-dependencies.version>
+        <springboot.version>3.1.2</springboot.version>
     </properties>
 
     <dependencyManagement>
@@ -47,8 +48,15 @@
             <!-- imports -->
             <dependency>
                 <groupId>com.powsybl</groupId>
-                <artifactId>powsybl-ws-dependencies</artifactId>
-                <version>${powsybl-ws-dependencies.version}</version>
+                <artifactId>powsybl-dependencies</artifactId>
+                <version>${powsybl-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${springboot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -68,7 +76,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>3.1.5</version>
             <optional>true</optional>
         </dependency>
         <dependency>
