--- a/pom.xml
+++ b/pom.xml
@@ -130,14 +130,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version> <!-- TODO : probablement à retirer ou déplacer dans un truc général-->
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream</artifactId>
-            <version>4.0.3</version> <!-- TODO : probablement à retirer ou déplacer dans un truc général-->
+            <version>4.0.3</version> <!-- TODO : nécessaire mais pas dans les dép de powsybl -> faire une lib séparée ?-->
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-network-store-client</artifactId>
+            <version>1.11.0</version> <!-- TODO : nécessaire mais pas dans les dép de powsybl -> faire une lib séparée ?-->
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -154,11 +154,6 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-computation-local</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-network-store-client</artifactId>
-            <version>1.11.0</version> <!-- TODO : probablement à retirer ou déplacer dans un truc général-->
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
