--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <powsybl-dependencies.version>2024.1.0</powsybl-dependencies.version>
         <springboot.version>3.1.2</springboot.version>
         <spring-cloud-stream.version>4.0.3</spring-cloud-stream.version>
-        <powsybl-network-store-client.version>1.11.0</powsybl-network-store-client.version>
+        <powsybl-network-store-client.version>1.12.0</powsybl-network-store-client.version>
     </properties>
 
     <dependencyManagement>
@@ -137,11 +137,6 @@
             <version>${spring-cloud-stream.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-network-store-client</artifactId>
-            <version>${powsybl-network-store-client.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
@@ -165,6 +160,23 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <!-- powsybl-network-store multimodule (no bom) -->
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-network-store-iidm-impl</artifactId>
+            <version>${powsybl-network-store-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-network-store-client</artifactId>
+            <version>${powsybl-network-store-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-network-store-model</artifactId>
+            <version>${powsybl-network-store-client.version}</version>
         </dependency>
     </dependencies>
 </project>
