--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
     <properties>
         <powsybl-dependencies.version>2024.1.0</powsybl-dependencies.version>
         <springboot.version>3.1.2</springboot.version>
-        <spring-cloud-stream.version>4.0.3</spring-cloud-stream.version>
         <powsybl-network-store-client.version>1.12.0</powsybl-network-store-client.version>
+        <spring-cloud.version>2022.0.3</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +53,14 @@
                 <version>${springboot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>com.powsybl</groupId>
@@ -96,7 +104,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream</artifactId>
-            <version>${spring-cloud-stream.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
