--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <artifactId>powsybl-ws-commons</artifactId>
-    <version>1.12.0-SNAPSHOT</version>
+    <version>1.12.0</version>
     <name>powsybl ws commons</name>
     <description>Powsybl WS commons</description>
 
@@ -40,7 +40,7 @@
     <properties>
         <powsybl-dependencies.version>2024.2.0</powsybl-dependencies.version>
         <springboot.version>3.1.2</springboot.version>
-        <powsybl-network-store-client.version>1.13.0</powsybl-network-store-client.version>
+        <powsybl-network-store-client.version>1.14.0</powsybl-network-store-client.version>
         <spring-cloud.version>2022.0.3</spring-cloud.version>
     </properties>
 
