--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'main'
+      - 'release-v**'
+    tags:
+      - 'v[0-9]*'
   pull_request:
 
 jobs:
@@ -21,7 +24,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build with Maven
-        run: mvn --batch-mode -P jacoco verify
+        run: mvn --batch-mode -Pjacoco verify
 
       - name: Run SonarCloud analysis
         run: >
@@ -32,3 +35,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Broadcast update event
+        if: github.ref == 'refs/heads/main'
+        uses: gridsuite/broadcast-event@main
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          organizations: gridsuite
+          event-type: ws_commons_updated
