--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <properties>
         <powsybl-dependencies.version>2024.3.1</powsybl-dependencies.version>
         <springboot.version>3.3.3</springboot.version>
-        <powsybl-network-store-client.version>1.20.0-SNAPSHOT</powsybl-network-store-client.version>
+        <powsybl-network-store-client.version>1.20.0</powsybl-network-store-client.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
     </properties>
 
