--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,10 @@
             <version>${powsybl-network-store-client.version}</version>
             <optional>true</optional>
         </dependency>
+         <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-security-analysis-api</artifactId>
+        </dependency>
 
         <!-- APT libraries -->
         <dependency>
@@ -163,5 +167,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
     </dependencies>
 </project>
