--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,8 @@
             <artifactId>powsybl-security-analysis-api</artifactId>
         </dependency>
 
+
+
         <!-- APT libraries -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -150,6 +152,7 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -167,6 +170,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-network-store-iidm-impl</artifactId>
+            <version>1.20.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
