Add computation utility class  (#84)
Signed-off-by: jamal-khey <myjamal89@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <version>${powsybl-network-store-client.version}</version>
             <optional>true</optional>
         </dependency>
+         <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-security-analysis-api</artifactId>
+             <optional>true</optional>
+        </dependency>
 
         <!-- APT libraries -->
         <dependency>
@@ -146,6 +151,7 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
