--- a/src/main/resources/com/powsybl/ws/commons/reports.properties
+++ b/src/main/resources/com/powsybl/ws/commons/reports.properties
@@ -1,2 +1,2 @@
-wscommons.reportType = ${reportType} (${provider})
-wscommons.rootReporterId = ${rootReporterId}
+ws.commons.reportType = ${reportType} (${provider})
+ws.commons.rootReporterId = ${rootReporterId}
