--- a/src/main/resources/com/powsybl/ws/commons/reports.properties
+++ b/src/main/resources/com/powsybl/ws/commons/reports.properties
@@ -1,2 +1,2 @@
-ws.commons.reportType = ${reportType} (${provider})
+ws.commons.reportType = ${reportType}${optionalProvider}
 ws.commons.rootReporterId = ${rootReporterId}
