--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
         <springboot.version>3.3.3</springboot.version>
         <powsybl-network-store-client.version>1.23.0</powsybl-network-store-client.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <spring-cloud-aws.version>3.2.0</spring-cloud-aws.version>
+        <aws-sdk.version>2.21.20</aws-sdk.version>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +68,20 @@
                 <groupId>com.powsybl</groupId>
                 <artifactId>powsybl-dependencies</artifactId>
                 <version>${powsybl-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>${aws-sdk.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.awspring.cloud</groupId>
+                <artifactId>spring-cloud-aws-dependencies</artifactId>
+                <version>${spring-cloud-aws.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -104,6 +120,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
