--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -121,7 +121,21 @@ spring:
       - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRepositoriesAutoConfiguration
       - org.springframework.boot.autoconfigure.data.elasticsearch.ReactiveElasticsearchRestClientAutoConfiguration
 
-
+  # for microservices with s3 storage, using aws.s3.enabled: true in microservice to create S3Service bean
+  cloud:
+    aws:
+      s3:
+        path-style-access-enabled: true
+      # classic minio port, useful default for exploring
+      endpoint: http://s3-storage:9000
+      region:
+        profile:
+          name: default
+        static: test
+      bucket: bucket-gridsuite
+      credentials:
+        access-key: minioadmin
+        secret-key: minioadmin
 
 powsybl-ws:
   environment:
